Bug 1991817: Avoid scaling scroll offset in content due to potential for async updates from APZ r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D269674